# Breda-roads-safety

./: Agenda_Retrospective_Week.docx  DataModeling.ipynb  Decision-Tree-Model.ipynb  EDA.ipynb  Final Project presentation.pptx  ILO_5.ipynb  JupyterNotebook_Y1D_2023-24_group_ILOs.ipynb  Project plan.docx  README.md  Retrospective_Sessions.txt  Stand_Up_Meetings.txt  Task 3.docx  Time_series.ipynb  Worklog - Y1D_2023-24_ADSAI.xlsx  knn_model (1).html
ILO_7/: 2023-24d-fai1-adsai-teamwork-t12 - Shortcut.lnk
ILO_7/Task_7_2_Virtual_Enviornment/: requirements.txt
ILO_7/project_deployment/: app.py  project_app.py  project_functions.py  pyproject.toml  script_1.py  unit_test.py
Models/: Decision-Tree-Model.ipynb  Gradient-boosting-Model.ipynb  NeuralNetwork.ipynb  Random-Forest-Model.ipynb
Models/.ipynb_checkpoints/: Decision-Tree-Model-checkpoint.ipynb  Gradient-boosting-Model-checkpoint.ipynb  Random-Forest-Model-checkpoint.ipynb
Prepocising/: Preprocessing_Journey.docx
Project/Week4_dataset/: Exploring_dataset.ipynb
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
