[tool.poetry]
name = "project-deployment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
streamlit = "^1.35.0"
folium = "^0.16.0"
streamlit-folium = "^0.20.0"
joblib = "^1.4.2"
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"
sphinx-rtd-theme = "^2.0.0"
scikit-learn = "^1.5.0"
pytest-cov = "^5.0.0"
tensorflow = "^2.16.1"
keras = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
